added append months, preferences and styles

--- a/inc/styles.css
+++ b/inc/styles.css
@@ -1,23 +1,23 @@
-#calendar_message{
+#calendar-view_c_message{
 	padding:10px;
 	border:1px solid #aaa;
 }
-#calendar.clickable td{
+#calendar-view_c.clickable td{
 	cursor:pointer;
 }
-#calendar.removable tr td.b,
-#calendar.removable tr td.arrival-b,
-#calendar.removable tr td.departure-b,
-#calendar.removable tr td.r,
-#calendar.removable tr td.arrival-r,
-#calendar.removable tr td.departure-r{
+#calendar-view_c.removable tr td.b,
+#calendar-view_c.removable tr td.arrival-b,
+#calendar-view_c.removable tr td.departure-b,
+#calendar-view_c.removable tr td.r,
+#calendar-view_c.removable tr td.arrival-r,
+#calendar-view_c.removable tr td.departure-r{
 	cursor:pointer;
 }
-#calendar tr{
+#calendar-view_c tr{
 	padding:0;
 	margin:0;
 }
-#calendar tr td{
+#calendar-view_c td{
 	width:15px;
 	height:15px;
 	padding:0;
@@ -25,74 +25,93 @@
 	text-align:center;
 	color:#fff;
 }
-#calendar tr td.month_name{
+#calendar-view_c .month_name{
 	padding-right:10px;
 	text-align:right;
 	color:#000;
 }
-#calendar tr.day_names td{
+#calendar-view_c .append_before .month_name,
+#calendar-view_c .append_after .month_name{
+	color:#999;
+}
+#calendar-view_c .day_names td{
 	color:#000;
 }
-#calendar tr td.f{
+#calendar-view_c .f{
 	background:#0c0;
 }
-#calendar tr td.b{
+#calendar-view_c .f.odd{
+	background:#0b0;
+}
+#calendar-view_c .b{
 	cursor:default;
 	background:#f00;
 }
-#calendar tr td.arrival-b{
+#calendar-view_c tr td.arrival-b{
 	background:#0c0 url(../modules/JSAvailability/icons/icon_gruen_rot.png) 0 0 no-repeat;
 }
-#calendar tr td.departure-b{
+#calendar-view_c tr td.departure-b{
 	background:#0c0 url(../modules/JSAvailability/icons/icon_rot_gruen.png) 0 0 no-repeat;
 }	
-#calendar tr td.arrival-b.departure-b{
+#calendar-view_c tr td.arrival-b.departure-b{
 	background:url(../modules/JSAvailability/icons/icon_rot_rot.png) 0  no-repeat;
 }
-#calendar tr td.r{
+#calendar-view_c tr td.r{
 	cursor:default;
 	background:#ff0;
 }
-#calendar tr td.arrival-r{
+#calendar-view_c tr td.arrival-r{
 	background:#0c0 url(../modules/JSAvailability/icons/icon_gruen_gelb.png) no-repeat;
 }
-#calendar tr td.departure-r{
+#calendar-view_c tr td.departure-r{
 	background:#0c0 url(../modules/JSAvailability/icons/icon_gelb_gruen.png) no-repeat;
 }
-#calendar tr.append_start td.departure-b,
-#calendar tr.append_end td.departure-b,
-#calendar tr.append_start td.arrival-b,
-#calendar tr.append_end td.arrival-b,
-#calendar tr.append_start td.departure-r,
-#calendar tr.append_end td.departure-r,
-#calendar tr.append_start td.arrival-r,
-#calendar tr.append_end td.arrival-r{
+#calendar-view_c tr.append_before td.departure-b,
+#calendar-view_c tr.append_after td.departure-b,
+#calendar-view_c tr.append_before td.arrival-b,
+#calendar-view_c tr.append_after td.arrival-b,
+#calendar-view_c tr.append_before td.departure-r,
+#calendar-view_c tr.append_after td.departure-r,
+#calendar-view_c tr.append_before td.arrival-r,
+#calendar-view_c tr.append_after td.arrival-r{
 	background-color:#bbb;
 }
-#calendar tr td.arrival-r.departure-b,
-#calendar tr td.arrival-b.departure-r{
+#calendar-view_c tr td.arrival-r.departure-b,
+#calendar-view_c tr td.arrival-b.departure-r{
 	background:url(../modules/JSAvailability/icons/icon_gelb_rot.png);
 }
-#calendar tr.append_start td.f,
-#calendar tr.append_end td.f{
+#calendar-view_c .append_before td.f,
+#calendar-view_c .append_after td.f{
 	background:#bbb;
 }
-#calendar tr.separator td{
+#calendar-view_c .append_before .odd.f,
+#calendar-view_c .append_after .odd.f{
+	background:#aaa;
+}
+#calendar-view_c .separator td{
 	height:15px;
 }
-
-td.control-1,
-td.control-2{
+#calendar-view_c .separator-2{
+	width:20px;
+}
+#calendar-view_c .control-1,
+#calendar-view_c .control-2{
 	text-transform:uppercase;
 	background:#ccc;
 	padding:5px;
 	cursor:pointer;
+	padding: 5px 10px 6px 10px;
+	-moz-border-radius: 5px 5px 5px 5px;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	border-radius: 5px 5px 5px 5px;
+	border: 1px solid #999;
+	color:#000;
 }
-td.control-1:hover,
-td.control-2:hover{
+#calendar-view_c .control-1:hover,
+#calendar-view_c .control-2:hover{
 	background:#bbb;
 }
-td.control-1.active,
-td.control-2.active{
+#calendar-view_c .control-1.active,
+#calendar-view_c .control-2.active{
 	background:#999;
 }
