--- a/inc/styles.css
+++ b/inc/styles.css
@@ -49,6 +49,12 @@
 #calendar-view_c .booking.odd{
 	background:#e00;
 }
+#calendar-view_c .reservation{
+	background:#ff0;
+}
+#calendar-view_c .reservation.odd{
+	background:#ee0;
+}
 #calendar-view_c .arrival.booking{
 	background:url(../icons/icon_green-red.png) 0 0 no-repeat;
 }
@@ -60,6 +66,15 @@
 }
 #calendar-view_c .departure.reservation{
 	background:url(../icons/icon_yellow-green.png) 0 0 no-repeat;
+}
+#calendar-view_c .arrival.departure.booking{
+	background:url(../icons/icon_red-red.png) 0 0 no-repeat;
+}
+#calendar-view_c .arrival.departure.reservation{
+	background:url(../icons/icon_yellow-yellow.png) 0 0 no-repeat;
+}
+#calendar-view_c .arrival.departure.reservation.booking{
+	background:url(../icons/icon_yellow-red.png) 0 0 no-repeat;
 }
 #calendar-view_c .control-1,
 #calendar-view_c .control-2{
