--- a/fielddefs/Availability/listit2fd-availability.css
+++ b/fielddefs/Availability/listit2fd-availability.css
@@ -63,8 +63,10 @@
 	background-position: center center;
 	background-repeat: no-repeat;
 	color: #436F00;
-	cursor: pointer;
 	overflow: hidden;
+}
+.pageinput .clndr .day {
+	cursor: pointer;
 }
 .clndr .day.event,
 .clndr .day.event-start.event-end {
